v 1.6.0
    - #432: Bootstrap Theme issues with filtering when we are using set_relation with multiple fields
v 1.5.9
    - #420: set_relation with brackets is causing ambiguous column name when the field name exists at the basic table
    - #413: Unexpected error when there are non english chars and a datetime field as column
    - #406: Export button to work without the need of a popup window or new tab
    - Clean-up redundant JavaScript load if it is not required.
    - Remove Export as a flash plugin for security reasons and instead add a download link
v 1.5.8
    - #382: Adding custom error message for set_rules()
    - Two new lang strings for the multiple delete confirmation
    - #388: Chosen select have 100% width at flexigrid theme
v 1.5.7
   - #331: Have a configurable XSS clean option to prevent XSS attacks
   - #370: A faster way to calculate the totals
v 1.5.6
   - Unset bootstrap with more CSS unsets
   - Languages updates (Portuguese, Italian, Spanish)
   - #367: Missing translation for Search {column_name}
v 1.5.5
   Add Croatian language - translated by: Siniša Dragičević Martinčić
   - Small CSS fixes: Datetime and date picker was overflowing in some languages
   - Removing uniform.js
v 1.5.4
   Changes for compatibility without jQuery Migrate
v 1.5.3
   #141 - Max length for decimal numbers (pull request from @dodge107)
   #335 - Unable to locate the model you have specified: grocery_crud_model (pull request: #336 from @P8H)
v 1.5.2
   Add lithuanian language - translated by alex@gnosi.lt
   Fix compatibility issues with Codeigniter 3
   Add "More" lang string for the datagrid listing
v 1.5.1
	#290 - Added functionality to define upload file types per field (pull request from @syrys)
	#305 - Update french.php and add translation for date format (pull request from @bvrignaud)
	New function unset_bootstrap that removes JS and CSS of the new bootstrap theme
v 1.5.0
	#211 - Bug if use where clause.
	#197 - Properly sanitize filenames for uploads.